# dlt-duckdb

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  rest_api_pipeline_example.py
data/: pokemon_teams.csv
src/dlt_duckdb/: __init__.py  config.py
src/dlt_duckdb/sources/: pokemon_api.py  team_rosters.py
