[project]
name = "dlt-duckdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "daniel-wallace-personal", email = "wallace.danielk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dlt[duckdb,filesystem]>=1.21.0",
    "loguru>=0.7.3",
    "pandas>=3.0.0",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
dlt-duckdb = "dlt_duckdb:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
